// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DisplaySettings should match snapshot 1`] = `
<RNCSafeAreaView
  edges={
    Array [
      "left",
      "right",
    ]
  }
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
  testID="display_settings.screen"
>
  <Connect(StatusBar) />
  <View
    style={
      Object {
        "backgroundColor": "rgba(63,67,80,0.06)",
        "flex": 1,
        "paddingTop": 35,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "rgba(63,67,80,0.1)",
          "height": 1,
        }
      }
    />
    <SettingsItem
      defaultMessage="Clock Display"
      i18nId="mobile.advanced_settings.clockDisplay"
      iconName="clock-outline"
      isDestructor={false}
      isLink={false}
      onPress={[Function]}
      separator={false}
      showArrow={true}
      testID="display_settings.clock_display.action"
      theme={
        Object {
          "awayIndicator": "#ffbc1f",
          "buttonBg": "#1c58d9",
          "buttonColor": "#ffffff",
          "centerChannelBg": "#ffffff",
          "centerChannelColor": "#3f4350",
          "codeTheme": "github",
          "dndIndicator": "#d24b4e",
          "errorTextColor": "#d24b4e",
          "linkColor": "#386fe5",
          "mentionBg": "#ffffff",
          "mentionColor": "#1e325c",
          "mentionHighlightBg": "#ffd470",
          "mentionHighlightLink": "#1b1d22",
          "newMessageSeparator": "#cc8f00",
          "onlineIndicator": "#3db887",
          "sidebarBg": "#1e325c",
          "sidebarHeaderBg": "#192a4d",
          "sidebarHeaderTextColor": "#ffffff",
          "sidebarTeamBarBg": "#14213e",
          "sidebarText": "#ffffff",
          "sidebarTextActiveBorder": "#5d89ea",
          "sidebarTextActiveColor": "#ffffff",
          "sidebarTextHoverBg": "#28427b",
          "sidebarUnreadText": "#ffffff",
          "type": "Denim",
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "rgba(63,67,80,0.1)",
          "height": 1,
        }
      }
    />
  </View>
</RNCSafeAreaView>
`;

exports[`DisplaySettings should match snapshot on Tablet devices 1`] = `
<RNCSafeAreaView
  edges={
    Array [
      "left",
      "right",
    ]
  }
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
  testID="display_settings.screen"
>
  <Connect(StatusBar) />
  <View
    style={
      Object {
        "backgroundColor": "rgba(63,67,80,0.06)",
        "flex": 1,
        "paddingTop": 35,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "rgba(63,67,80,0.1)",
          "height": 1,
        }
      }
    />
    <SettingsItem
      defaultMessage="Sidebar"
      i18nId="mobile.display_settings.sidebar"
      iconName="dock-left"
      isDestructor={false}
      isLink={false}
      onPress={[Function]}
      separator={true}
      showArrow={true}
      theme={
        Object {
          "awayIndicator": "#ffbc1f",
          "buttonBg": "#1c58d9",
          "buttonColor": "#ffffff",
          "centerChannelBg": "#ffffff",
          "centerChannelColor": "#3f4350",
          "codeTheme": "github",
          "dndIndicator": "#d24b4e",
          "errorTextColor": "#d24b4e",
          "linkColor": "#386fe5",
          "mentionBg": "#ffffff",
          "mentionColor": "#1e325c",
          "mentionHighlightBg": "#ffd470",
          "mentionHighlightLink": "#1b1d22",
          "newMessageSeparator": "#cc8f00",
          "onlineIndicator": "#3db887",
          "sidebarBg": "#1e325c",
          "sidebarHeaderBg": "#192a4d",
          "sidebarHeaderTextColor": "#ffffff",
          "sidebarTeamBarBg": "#14213e",
          "sidebarText": "#ffffff",
          "sidebarTextActiveBorder": "#5d89ea",
          "sidebarTextActiveColor": "#ffffff",
          "sidebarTextHoverBg": "#28427b",
          "sidebarUnreadText": "#ffffff",
          "type": "Denim",
        }
      }
    />
    <SettingsItem
      defaultMessage="Clock Display"
      i18nId="mobile.advanced_settings.clockDisplay"
      iconName="clock-outline"
      isDestructor={false}
      isLink={false}
      onPress={[Function]}
      separator={false}
      showArrow={true}
      testID="display_settings.clock_display.action"
      theme={
        Object {
          "awayIndicator": "#ffbc1f",
          "buttonBg": "#1c58d9",
          "buttonColor": "#ffffff",
          "centerChannelBg": "#ffffff",
          "centerChannelColor": "#3f4350",
          "codeTheme": "github",
          "dndIndicator": "#d24b4e",
          "errorTextColor": "#d24b4e",
          "linkColor": "#386fe5",
          "mentionBg": "#ffffff",
          "mentionColor": "#1e325c",
          "mentionHighlightBg": "#ffd470",
          "mentionHighlightLink": "#1b1d22",
          "newMessageSeparator": "#cc8f00",
          "onlineIndicator": "#3db887",
          "sidebarBg": "#1e325c",
          "sidebarHeaderBg": "#192a4d",
          "sidebarHeaderTextColor": "#ffffff",
          "sidebarTeamBarBg": "#14213e",
          "sidebarText": "#ffffff",
          "sidebarTextActiveBorder": "#5d89ea",
          "sidebarTextActiveColor": "#ffffff",
          "sidebarTextHoverBg": "#28427b",
          "sidebarUnreadText": "#ffffff",
          "type": "Denim",
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "rgba(63,67,80,0.1)",
          "height": 1,
        }
      }
    />
  </View>
</RNCSafeAreaView>
`;
